# sketchpad

./: CMakeLists.txt  Makefile  README.md  command.sh  main  main.cpp  output.json
Source/: main.cpp
Source/examples/: trillium-lemma.sp  viking_battle_p3.sp
Source/filebrowser/: Makefile  browser.cpp  browser.h
Source/src/core/: alg.h  geometry.cpp  geometry.h
Source/src/core/primitives/: circle.h  conic.h  point.h
Source/src/core/protocol/: protocol.cpp
Source/src/view/: button.cpp
examples/: e1.sp  e2.sp  eulers-circle.sp  pappus-theorem.sp
filebrowser/: browser  browser.cpp
src/core/: alg.cpp  alg.h  geometry.cpp  geometry.h  text_converter.txt
src/core/primitives/: circle.h  conic.h  cubic.h  line.h  point.h
src/core/protocol/: protocol.cpp  protocol.h
src/geo_genie/: property.h  searcher.h
src/parser/: parse.cpp  parse.h
src/view/: button.h  toolbar.h
